--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <title>Wireframe HW</title>
+        <link href="style.css" rel="stylesheet">
     </head>
     <body>
         <header>
-            <h1></h1>
+            <h1>Header</h1>
+            <nav></nav>
         </header>
+        <aside>
+            <h1>Aside</h1>
+        </aside>
+        <section>
+            <h1>Section</h1>
+            <article>
+                <h1>Article</h1>
+            </article>
+        </section>
+        <footer>
+            <h1>footer</h1>
+        </footer>
     </body>
 </html>
