--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Wireframe HW</title>
+        <link href="reset.css" rel="stylesheet">
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
         <header>
             <h1>Header</h1>
-            <nav></nav>
+            <nav>
+                <h1>Nav</h1>
+            </nav>
         </header>
         <aside>
             <h1>Aside</h1>
